adding foldable rows

--- a/index.css
+++ b/index.css
@@ -31,3 +31,14 @@ div.contained {
 	display: inline-block;
 }
 
+.container {
+	overflow-y: hidden;
+}
+
+.container > p {
+	color: white;
+}
+
+.folded {
+	height: 2em;
+}
