Refinement and adding monitors

--- a/site.css
+++ b/site.css
@@ -11,6 +11,14 @@ div.header > span {
 	color: white;
 }
 
+.ok { 
+	color: green; 
+}
+
+.ko { 
+	color: red; 
+}
+
 .box {
 	width: 20em;
 	height: 21em;
