--- a/site.css
+++ b/site.css
@@ -91,6 +91,7 @@ div.header > span {
 	text-align: center;
 	border-radius: 1em;
 	box-shadow: 0.2em 0.2em darkred;
+	overflow: hidden;
 }
 
 .runner > p {
